# tsp-rs

./: .gitignore  Cargo.toml
crates/tsp-core/: Cargo.toml
crates/tsp-core/src/: instance.rs  lib.rs  tsp_lib_spec.rs
crates/tsp-core/src/instance/: distance.rs  distances.rs  edge.rs  mod.rs
crates/tsp-core/src/instance/edge/: data.rs  distance.rs
crates/tsp-core/src/instance/edge/distance/: fixed_point_arithmetic.rs  mod.rs
crates/tsp-core/src/instance/matrix/: symmetric.rs
crates/tsp-macros/: Cargo.toml
crates/tsp-macros/src/: lib.rs
crates/tsp-parser/: Cargo.toml
crates/tsp-parser/benches/: parse_and_compute_dist.rs  parse_into_matrix.rs
crates/tsp-parser/src/: lib.rs  metadata_parser.rs
crates/tsp-parser/src/data_section/: distance_function.rs  mod.rs
crates/tsp-parser/src/distance_container/: matrix.rs  matrix_sym.rs  mod.rs
crates/tsp-parser/src/distance_data/: mod.rs
crates/tsp-parser/src/metadata/: mod.rs
crates/tsp-parser/tests/it/: check_against_golden_file.rs  mod.rs  parse_without_error.rs
crates/tsp-parser/tests/test_assets/distances/: ulysses22.txt
crates/tsp-rs/: Cargo.toml  README.md
crates/tsp-rs/src/: main.rs
crates/tsp-rust/: Cargo.toml
crates/tsp-rust/src/: main.rs
crates/tsp-solvers/: Cargo.toml
crates/tsp-solvers/benches/: held_karp.rs  one_tree.rs
crates/tsp-solvers/src/: held_karp.rs  lib.rs
crates/tsp-solvers/src/held_karp/: fixed_point_arithmetic.rs  mod.rs  trees.rs
crates/tsp-solvers/src/held_karp_mod/: mod.rs  parallel.rs
crates/tsp-solvers/src/utils/: mod.rs  trees.rs
crates/tsp-solvers/tests/it/: mod.rs
instances/bench/: results.txt
src/: instance.rs
