[package]
name = "tsp-macros"
version = "0.1.0"
description = "Macros for the TSP project."

keywords = ["tsp", "macros", "rust"]
categories = ["development-tools"]
readme = "README.md"

license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }